--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,16 +1,14 @@
 ---
 title: "Compliant Innovation | Datica"
-summary: "The Datica Platform makes your cloud workloads compliant and secure to the standards of HIPAA, HITRUST, GDPR, and GxP on AWS and Azure."
+summary: "Datica makes your cloud workloads compliant and secure to the standards of HIPAA, HITRUST, GDPR, and GxP on AWS and Azure."
 author: "Datica, Inc."
-tags: "training, education, HIPAA, HL7, FHIR, interoperability, EHR, integration, resource"
-date: "January 1, 2017"
+tags: "compliance, HITRUST, integration, EHR, healthcare, education, HIPAA, HL7, FHIR, interoperability"
 customCSS: "home"
 customJS: "/public/js/products.js"
 layout: "basic"
 priority: "1.0"
 collectionName: "home"
 feed_url: "https://datica.com/blog/feed.xml"
-asset_preload: '<link href="/public/img/art/home-header-art-hexagons-anim.svg" rel="preload" as="image" />'
 list_resources:
   -
     slug: "blog"
@@ -47,7 +45,7 @@ ruby:
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   # current_page.data.share_image = image_share_platform
   featured_img = "https://images.ctfassets.net/189dvqdsjh46/62MYHqth60wmUosWQQ0es8/470d9a7b58ffede77ae3d064cf86b655/office_-_istockphoto-626637134_edit.jpg"
-  current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />'
+  current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />, \ <link href="' + bg_product_light + '" rel="preload" as="image" />'
   current_page.data.share_image = featured_img
 
 / section.bg-gray-1
@@ -67,15 +65,15 @@ section#top.bg-gray-12.container-image-fill.lozad data-background-image=bg_produ
             a.text-bold.spaced-out href="/about/" About Datica
     .button-group.menu.align-center
       /= partial "partials/snippets/button", :locals => { :label => "Ask a Datica Expert", :url => "/contact/", :icon_align => "right", :button_classes => "button hollow", :icon => "icon-chat" }
-      = partial "partials/snippets/button", :locals => { :label => "Request a demo", :url => "/demo/", :button_classes => "button primary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "cmi" }
+      = partial "partials/snippets/button", :locals => { :label => "Request a demo", :url => "/demo/", :button_classes => "button primary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "get_demo", :data_track_group => "products" }
 .strip-bright
 section#products.section-article.bg-gray-3.container-image-fill.lozad data-background-image=bg_product_dark
   .row.align-center
     .columns.small-12.medium-12.large-8.text-center
       h2.headline-1.text-bold What's your biggest challenge?
   .button-group.menu.align-center.group
-    = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST audit", :url => "/compliance/", :icon_align => "left", :button_classes => "button button--light button--hover-compliance no-nudge", :icon => "icon-chevron-left", :item_id => "product", :data_track_group => "cat_integration" }
-    = partial "partials/snippets/button", :locals => { :label => "I need to integrate with an EHR", :url => "/integration/", :button_classes => "button button--light button--hover-integration no-nudge", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "product", :data_track_group => "cat_compliance" }
+    = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST audit", :url => "/compliance/", :icon_align => "left", :button_classes => "button button--light button--hover-compliance no-nudge", :icon => "icon-chevron-left", :item_id => "get-compliance", :data_track_group => "products" }
+    = partial "partials/snippets/button", :locals => { :label => "I need to integrate with an EHR", :url => "/integration/", :button_classes => "button button--light button--hover-integration no-nudge", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "get-integration", :data_track_group => "products" }
   .row.align-center
     .columns.small-12.large-8.text-center
       p.lead <strong>You have complex problems.</strong> Datica has a family of powerful solutions. Powerful when used on their own but meant to work together, our products and solutions address your most pressing challenges.
