--- a/source/partials/content/_card-case-study.erb
+++ b/source/partials/content/_card-case-study.erb
@@ -1,5 +1,5 @@
 <!-- card-case-study partial -->
-<div class="card drop-light">
+<div class="card drop-light drop-hover">
     <% if cf_customer["case_study"].has_key?("media_object") %>
 
         <div class="responsive-embed widescreen">
