Addressing issues found in frog scan.

--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -23,14 +23,14 @@ section.hide-for-large
     .columns.small-12
       img.lozad.blur-in src="#{featured_img}?fit=thumb&w=800&h=400?q=10" data-src="#{featured_img}?fit=thumb&w=800&h=600&q=30" data-srcset="#{featured_img}?fit=thumb&w=800&h=600&q=50 800w, #{featured_img}?fit=thumb&w=1600&h=600 1200w" alt="Tech workers working on an audit"
       .bg-white.pad--lg
-        h1.headline-1 Can your business pass a HITRUST audit?
+        h2.headline-1 Can your business pass a HITRUST assessment?
         h2.headline-3.text-bold.group With CCMS, the answer is yes.
         p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
         = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin", :item_id => "cta_top-products", :icon => "icon-chevron-right", :icon_align => "right" }
 section#top.show-for-large.section-article.pad-no-bottom.bg-gray-3.container-image--center.lozad data-background-image="#{featured_img}?fit=thumb&w=1800&h=900&q=65"
   .row.align-right.align-middle
     .columns.small-12.medium-6
-      h1.headline-1.text-bold.text-shadow.group--2x Can your business pass a HITRUST audit?
+      h1.headline-1.text-bold.text-shadow.group--2x Can your business pass a HITRUST assessment?
       .bg-white.pad--lg.drop.pull-down
         h2.headline-3.text-bold With CCMS, the answer is yes.
         p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
@@ -157,7 +157,7 @@ aside#ctaBottom.bg-gray-3.section-article.container-image--center.lozad data-bac
     .relative.z-5
       .row.align-center.group--sm
         .columns.small-12.medium-10.large-10.text-center
-          h2.headline-3 HITRUST audit? No problem.
+          h2.headline-3 HITRUST assessment? No problem.
       .row.align-center
         .columns.shrink
           = partial "partials/snippets/button", :locals => { :label => "Learn more about HITRUST compliance", :url => "/discover/hitrust/", :button_classes => "button hollow-inverted" }
