--- a/source/catalyze.html.erb
+++ b/source/catalyze.html.erb
@@ -13,7 +13,7 @@ layout: "basic"
     <section class="section-article">
         <div class="row align-center">
             <div class="columns small-12 medium-8 catalyze-content-section">
-                <h1>The Story Behind The Rebrand</h1>
+                <h2 class="headline-3">The Story Behind The Rebrand</h2>
                 <p>Catalyze is now Datica, and we are thrilled about the switch. Our path from Catalyze to Datica is a challenge many businesses in America face, and we’d like to share the story with you.</p>
                 <p>As a company, we believe in transparency as a central pillar. First and foremost, transparency is the right thing to do. Secondly, we believe commitment to transparency as a company focused on the hardest components of compliance, security, and privacy is a striking position to take. Since Day 1 we have adhered:</p>
                 <ul>
@@ -24,7 +24,7 @@ layout: "basic"
                 </ul>
                 <p>Transparency creates trust, and—never forget—trust is the currency of security, thus the most important attribute in a rightly cautious industry like healthcare. Plus: the easiest way to tackle compliance and interoperability is to make it less opaque. As we openly share our expertise, the less complex we make the burdensome topics of HIPAA and HL7.</p>
                 <p>It is with transparency in mind that we share our story about transforming Catalyze into Datica.</p>
-                <h1>The Genesis of Catalyze</h1>
+                <h2 class="headline-3">The Genesis of Catalyze</h2>
                 <p>When cofounders Travis and Mohan met, they had an idea to make software development easier for digital health organizations. The burden of HIPAA compliance became a detriment to innovation for these developers. There was no compliant deployment service for fast prototyping. There were no backend service tools for database management. There were no open APIs for connecting applications and workflows. The co-founders knew that if they could remove HIPAA as a burden, they could make an enormous impact on the industry by catalyzing other developers. The origin of Catalyze was born, and the products developed.</p>
                 <p>Things went well. Recently completing a third round of financing fueled by exponential revenue growth, the market gave a resounding answer: Removing HIPAA as a burden is really important to accelerating the speed of innovation within healthcare. The company’s scope of offerings expanded as the market expanded as well: We moved beyond hosting to also providing integration services so that digital health innovations can more easily and quickly be integrated into health systems. Integration is a formidable burden too—an expensive and inefficient sibling to compliance.</p>
                 <p>Catalyze was the right name to demonstrate the vision and impact the company was having on healthcare. We purposefully ignored Catalyst as a noun and chose Catalyze as a verb to demonstrate our intent to propel action.</p>
@@ -39,7 +39,7 @@ layout: "basic"
                 </ul>
                 <p>It should be no surprise that after almost 3 years of litigation with the USPTO, we ended up not receiving a trademark for Catalyze. While there were no direct competitors, the office’s final ruling stated the name is too generic a verb throughout the industries of healthcare and technology to receive a trademark.</p>
                 <p>Couple all these situations with the owner of catalyze.com being unwilling to sell at any price, and it became clear we would continue to struggle sharing our story and accomplishments with the world. Our name was a perfect fit to explain our passion, but was not unique enough to empower our unique influence on a multi-trillion-dollar industry notoriously poor at innovation.</p>
-                <h2>The Transition to Datica</h2>
+                <h2 class="headline-3">The Transition to Datica</h2>
                 <p>The above factors lead us to a rebranding exercise throughout 2016. We knew we needed a name that fit several key criteria, but especially:</p>
                 <ul>
                     <li>Something unique;</li>
@@ -49,18 +49,18 @@ layout: "basic"
                 </ul>
                 <p>For those who have never undergone a rebranding process, let us be the first to say that it is a rollercoaster. The high-highs of finding a perfect name are quickly shattered by the low-lows of uncovering a deal breaker. It is almost impossible to own anything unique on the Internet in 2017.</p>
                 <p>Datica checked all the boxes. We believe it will carry our story forward into 2017 and beyond. Additionally, our trademark attorney sees no issues with us owning the mark and protecting our brand around Datica, recently telling us that he felt this was one of the strongest client rebrandings he’s ever been a part of.</p>
-                <h1>The Future of Healthcare is about Connection</h1>
+                <h2 class="headline-3">The Future of Healthcare is about Connection</h2>
                 <p>When the company was founded in 2013 as Catalyze, we described our vision as</p>
                 <p><em>The future of healthcare will be powered by compliant, scalable, interoperable, cloud-based infrastructure and Catalyze exists to build that future.</em></p>
                 <p>We have achieved that future, at least to the extent that the future exists today, even if all of healthcare hasn’t adopted it yet. Organizations as large as The Veterans Affairs, Johnson &amp; Johnson and UnitedHealthcare or as fresh as Y-Combinator startup alums have all bought into a shared vision, and we are happy to serve them as a partner.</p>
                 <p>But we now understand this is just the beginning. Healthcare is undergoing a massive, well-documented shift from volume- to value-based care. Market pressures are creating disruptors left and right for every group—providers, payers, insurance, pharma, life sciences, vendors, everyone. Adapting to, and evolving with, compounding disruptions is how healthcare ultimately arrives at a future truly achieving the triple aim of better, safer, more satisfying patient care at a lower cost.</p>
                 <p>Yes, compliant and scalable infrastructure is a foundation to get there, but it’s just the first layer.</p>
-                <h2>Connection is the key to healthcare’s future.</h2>
+                <h2 class="headline-3">Connection is the key to healthcare’s future.</h2>
                 <p>Connection on a lot of levels. Connecting patients to doctors is certainly central. We buy into the beliefs of organizations like Health 2.0 or luminaries like Dr. Robert Wachter that making the patient central is critical. Connecting partners, like Dr. Thomas Graham explains, is an accelerant. Connecting ideas mindfully—instead of mindlessly, like Dr. Chris Wasden explains—is how we make stepwise improvements.</p>
                 <p>Connection within technology matters too. True interoperability is years, if not decades, away from realization. We don’t pretend to think Datica or anyone else has a silver bullet for absolute interoperability, but connecting vendors and solutions to health systems is how innovation happens, and decade-old EHRs with limitations and archaic protocols aren’t helping. APIs must mature. FHIR will replace HL7 in many instances. We tend to think that healthcare is on the cusp of laying the right foundation which achieves interoperability years in the future. Datica is laying the foundation.</p>
                 <p>We believe by focusing on the needs of data within the context of healthcare, we will bring together the industry more effectively than anyone else to date. It starts by understanding compliance and security then moves to understanding network connectivity. The stack ascends to looking at integration as a process, not a silver bullet, and emerges into providing the tools needed to work with data within any application, any use case, or any innovation.</p>
                 <p>This is the future the present can use, and Datica is delivering it because we are the full stack for connecting healthcare.<p>
-                <h1>Let’s start this adventure together</h1>
+                <h2 class="headline-3">Let’s start this adventure together</h2>
                 <p>While we are sad to let Catalyze go, we are energized by the evolution of Datica. We want to invite everyone who has been following Catalyze since 2013—customers, partners, innovators, the media, and the industry—along for the journey over the next several years. We are here to help you succeed.</p>
                 <p>Sincerely,</p>
 
