redirect for integrations; updated default share images.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -45,7 +45,7 @@ ruby:
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   # current_page.data.share_image = image_share_platform
   featured_img = "https://images.ctfassets.net/189dvqdsjh46/62MYHqth60wmUosWQQ0es8/470d9a7b58ffede77ae3d064cf86b655/office_-_istockphoto-626637134_edit.jpg"
-  current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />, \ <link href="' + bg_product_light + '" rel="preload" as="image" />'
+  current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />, <link href="' + bg_product_light + '" rel="preload" as="image" />'
   current_page.data.share_image = featured_img
 
 / section.bg-gray-1
